app/assets/stylesheets/components/filter_vacancies.scss
.filter-vacancies {
  margin-bottom: 0;
  padding: $govuk-gutter-half;
  background-color: govuk-colour("grey-3");
  h2 {
    margin: 0 0 $govuk-gutter-half 0;
  }
  .govuk-form-group {
    margin-bottom: $govuk-gutter-half;
  }
  .form-control {
    border-color: govuk-colour("grey-1");
  }
  .govuk-button {
    margin-top: $govuk-gutter-half;
  }

  @include govuk-media-query($until: tablet) {
    margin-bottom: $govuk-gutter;
  }

  // filters form white checkbox on grey background
  .filters-form .govuk-checkboxes {
    float: left;
    background: govuk-colour("white");
    .govuk-checkboxes__item {
      max-height: 40px;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-content: center;
    }
    label {
      background: govuk-colour("grey-3");
      padding: 12px 15px 8px;
       @include govuk-media-query($from: desktop) {
         padding: 10px 15px 5px;
       }
    }
  }

  .filters-form .checkbox-group {
    &--scrollable {
      height: 220px;
      overflow: auto;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    padding: 10px 10px 0 10px;
    border: 2px solid govuk-colour("grey-1");
    box-sizing: border-box;
    width: 100%;
    label {
      background: govuk-colour("white");
      font-size: $small-font-size;
    }
    &__divider {
      $govuk-divider-size: 40px;
      @include govuk-font($size: 19);
      @include govuk-text-colour;
      width: $govuk-divider-size;
      margin-bottom: govuk-spacing(2);
      text-align: center;
    }
  }
  .filters-form .checkbox-group:after {
    content: "";
    height: 10px;
    display: block;
  }
}

